--- a/test/e2e/infra/vagrant/Vagrantfile
+++ b/test/e2e/infra/vagrant/Vagrantfile
@@ -41,6 +41,11 @@ else
   MEMORY = 2048
 end
 
+if ENV['K8S_CLICKHOUSE_DISK'] == "true"
+  ENV['VAGRANT_EXPERIMENTAL'] = "disks"
+end
+
+
 KUBE_PROXY_MODE = ENV['KUBE_PROXY_MODE'] || "iptables"
 if KUBE_PROXY_MODE == "iptables" || KUBE_PROXY_MODE == "none"
   KUBE_PROXY_IPVS_STRICT_ARP = false
@@ -115,6 +120,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         node_ip = node_ipv6
       else
         node_ip = node_ipv4 + "," + node_ipv6
+      end
+      if ENV['K8S_CLICKHOUSE_DISK'] == "true"
+        node.vm.disk :disk, size: "8GB", name:"clickhouse_storage"
       end
 
       node.vm.provision :ansible do |ansible|
